pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: nginx-hpa
spec:
  containers:
  - name: nginx
    image: nginx:stable-alpine
    ports:
    - containerPort: 80
